# federated-models

./: .gitignore  README.md  pyproject.toml
global_models/: global_modelFEDAVG.keras  global_modelFEDSGD.keras  global_modelIDA.keras
local_models/: lmodel_1.keras  lmodel_2.keras
models/: global_model.keras  global_modelFEDAVG.keras  global_modelIDA.keras  lmodel_0.keras  lmodel_3.keras  lmodel_4.keras
models/globals/: global_modelFEDAVG.keras  global_modelFEDSGD.keras  global_modelIDA.keras
notebooks/: entrenamiento_global.ipynb  entrenamiento_local.ipynb  global_model.keras  pruebas.ipynb
src/: model.py  modelG.py
