[project]
name = "federated-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
    "tqdm>=4.67.1",
]
